kubernetes/resources/homelab-demo/overlays/app-2/middleware-strip-prefix-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: demo-app-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /demo-app-2
