kubernetes/resources/homelab-demo/overlays/app-2/ingressroute-http-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-app-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hld.chammanganti.dev`) && PathPrefix(`/demo-app-2`)
      kind: Rule
      middlewares:
        - name: demo-app-redirect-https
      services:
        - name: demo-app-2
          port: 80
